# valve.py

./: Makefile  README.md  VALVE.VERSION  extra_cargo_entries.toml  ontodev_valve.py_version  override_valve_version.py  pyproject.toml  requirements.txt  setup.py  valve_py.rs
.github/workflows/: build-and-publish-wheels.yml  python-publish.yml  python-test-publish.yml  python-test.yml  run-tests.yml  valve-py-push.yml
src/: valve.py
test/: main.py
tests/: test_helpers.py  test_valve.py
tests/resources/: datatype.tsv  errors.tsv  errors_distinct.tsv  exposure_distinct.tsv  external_distinct.tsv  external_distinct_distinct.tsv  rule.tsv
tests/resources/inputs/: datatype.tsv  external.tsv  field.tsv  protein.tsv  rule.tsv
valve/: __init__.py  parse.py  valve.py
valve/resources/: valve.json
