[build-system]
requires      = ["setuptools>=63.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lmcmicu2_ontodev_valve"
version = "0.1.1"
description = "VALVE bindings for Python"
readme = "README.md"
authors = [{ name = "Knocean Inc." }]
license = { file = "LICENSE" }
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/ontodev/valve.py"
