[build-system]
requires      = ["setuptools>=63.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontodev_valve"
description = "VALVE bindings for Python"
readme = "README.md"
authors = [{ name = "Knocean Inc." }]
license = { file = "LICENSE" }
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/ontodev/valve.py"
